# stateman

./: .gitignore  .travis.yml  README.md  conftest.py  deploy.sh  example.py  pyproject.toml  secrets.json  test_main.py  tests.py
stateman/: __init__.py
