[project]
name = "stateman"
version = "1.3.1" # Убедитесь, что версия актуальна
description = "This module provides tools to track changes in the content of a directory and create compact binary patches that can be used to synchronize another copy of that directory."
readme = "README.md"
license = { text = "MIT" } 
authors = [
    { name = "vpuhoff", email = "vpuhoff@live.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", # Примерный статус
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [] 

[project.scripts]
keylocker = "entry:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
